Change svg and try to fix spacing

--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -267,7 +267,8 @@ mat-form-field.quarter-filter .mat-mdc-text-field-wrapper {
 }
 
 .add-cross-button {
-  margin-bottom: 1px;
+  width: 1rem !important;
+  margin: 0 4px 1px 9px !important;
 }
 
 .add-text {
